Fix bug with next-question button not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,8 +209,11 @@ header{
   font-size: 1.5rem;
 }
 
+#move-on{
+  visibility: hidden;
+}
 #next-question {
-  display: none;
+  display: inline;
 }
 #finish-game {
   display: none;
